erDiagram
    VEHICLES ||--o{ FUEL_ENTRIES : has
    VEHICLES ||--o{ MAINTENANCE_ENTRIES : has
    VEHICLES ||--o{ MAINTENANCE_ITEMS : has
    VEHICLES ||--o{ CUSTOM_REMINDERS : has

    VEHICLES {
        string id PK
        string name
        string plate_number
        double odometer
        string registration_image_url
        string user_id
    }

    FUEL_ENTRIES {
        string id PK
        string vehicle_id FK
        double liters
        double total_cost
        double station_lat
        string station_address
        string date
    }

    MAINTENANCE_ENTRIES {
        string id PK
        string vehicle_id FK
        string type
        string title
        double cost
        string image_path
        string date
    }

    MAINTENANCE_ITEMS {
        string id PK
        string vehicle_id FK
        string name
        int interval_km
        int last_done_odo
    }
